--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
-    "@solana/web3.js": "1.63.1"
+    "@solana/web3.js": "1.63.1",
+    "bs58": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.25",
     "react-scripts": "^4.0.3",
-    "typescript": "^4.4.3"
+    "typescript": "^4.6.2"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -31,8 +34,8 @@
     "styled-components": "^5.3.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "GENERATE_SOURCEMAP=true react-scripts start",
+    "build": "GENERATE_SOURCEMAP=true react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "tsc": "tsc"
   },
@@ -41,5 +44,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+}
 }
