--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
     "esModuleInterop": true,
     "lib": [
       "dom",
-      "es2015"
+      "es2020"
     ],
     "jsx": "react-jsx",
-    "target": "es6",
+    "target": "es2020",
     "allowJs": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
@@ -23,6 +23,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "sourceMap": true
   }
 }
